--- a/src/Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
                     <section class="col-sm-6"></section>
                     <section class="col-sm-6">
                         <div class="esh-app-footer-text hidden-xs"> e-ShopOnWeb. All rights reserved </div>
+                        <div class="esh-app-footer-text hidden-xs"> e-ShopOnWeb. Todos los derechos reservados </div>
                     </section>
                 </article>
             </div>
